<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>legged_control_base</name>
    <version>3.2.2</version>
    <description>A package includes basic functionalities for legged_control.</description>
    <maintainer email="liaoqiayuan@gamil.com">Qiayuan Liao</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>legged_model</exec_depend>
    <exec_depend>legged_estimation</exec_depend>
    <exec_depend>legged_controllers</exec_depend>
    <exec_depend>legged_rl_controllers</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
