<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>legged_controllers</name>
    <version>3.2.2</version>
    <description>Model of legged robot</description>
    <maintainer email="liaoqiayuan@gamil.com">Qiayuan Liao</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>

    <depend>legged_estimation</depend>
    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ros2controlcli</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joy_linux</exec_depend>
    <exec_depend>joy_teleop</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
